Another set of fixed tests Using only IpId, removed IpInfo